@@ -28,23 +28,29 @@ u32 estimate_syscall(const char *lib, u32 nid)
 {
 	char file_path[MAX_LIBRARY_NAME_LENGTH + 100];
 	SceUID nid_file;
-	int lib_index, file_index, lowest_index;
-	u32 estimated_syscall;
-	tSceLibrary *plibrary_entry;
+	int lib_index, file_index;
+	int estimated_syscall;
 	u32 firmware_v;
 
 	LOGSTR2("=> ESTIMATING %s : 0x%08lX\n", lib, nid);
 	
 	// Finding the library on table
-	plibrary_entry = get_library_entry(lib);
+	lib_index = get_library_index(lib);
 
-	if (plibrary_entry == NULL)
+	if (lib_index < 0)
 	{
 		LOGSTR1("--ERROR: LIBRARY NOT FOUND ON TABLE  %s\n", lib);
         return 0;
     }
 
-	LOGSTR2("--LOWEST NID/SYSCALL ON LIBRARY:  0x%08lX//0x%08lX\n", plibrary_entry->lowest_nid, plibrary_entry->lowest_syscall);
+	LOGSTR0("-->Library name: ");
+	LOGSTR0(library_table[lib_index].library_name);
+	LOGSTR0("\n");
+	LOGSTR1("--Calling mode: %d\n", library_table[lib_index].calling_mode);
+	LOGSTR1("--Total library exports: %d\n", library_table[lib_index].num_library_exports);
+	LOGSTR1("--Known library exports: %d\n", library_table[lib_index].num_known_exports);
+	LOGSTR2("--Lowest NID/SYSCALL:  0x%08lX/0x%08lX\n", library_table[lib_index].lowest_nid, library_table[lib_index].lowest_syscall);
+	LOGSTR1("--Lowest index in file: %d\n", library_table[lib_index].lowest_index);
 		
 	// Constructing the file path
 	strcpy(file_path, LIB_PATH);
@@ -72,9 +78,12 @@ u32 estimate_syscall(const char *lib, u32 nid)
 	
 	// Get NIDs index in file
 	file_index = find_nid_in_file(nid_file, nid);
-	lowest_index = find_nid_in_file(nid_file, plibrary_entry->lowest_nid);
 	
 	sceIoClose(nid_file);
+
+	LOGSTR0("--NID index in ");
+	LOGSTR0(file_path);
+	LOGSTR1(": %d\n", file_index);
 
 	if (file_index < 0)
 	{
@@ -82,13 +91,25 @@ u32 estimate_syscall(const char *lib, u32 nid)
 		exit_with_log(" ", &nid, sizeof(nid));
 	}
 
-	// Set estimated syscall to lowest syscall in library
-	estimated_syscall = plibrary_entry->lowest_syscall;
+	int aux0 = (int)library_table[lib_index].lowest_syscall + file_index;
+
+	LOGSTR1("Pre: 0x%08lX\n", aux0);
 	
-	if (file_index > lowest_index)
-		estimated_syscall += (unsigned int) file_index - lowest_index;
+	if (file_index > library_table[lib_index].lowest_index)
+	{
+		estimated_syscall = aux0 - (int)library_table[lib_index].lowest_index;
+	}
 	else
-		estimated_syscall += (plibrary_entry->num_library_exports - lowest_index) + (unsigned int)file_index;
+	{
+		/*
+		LOGSTR1("--aux0: %d\n", aux0);
+		LOGSTR1("--library_table[lib_index].num_library_exports: %d\n", library_table[lib_index].num_library_exports);
+		LOGSTR1("--library_table[lib_index].lowest_index: %d\n", library_table[lib_index].lowest_index);
+		*/
+		estimated_syscall = aux0 + (int)library_table[lib_index].num_library_exports - (int)library_table[lib_index].lowest_index;
+	}
+
+	LOGSTR1("--FIRST ESTIMATED SYSCALL: 0x%08lX\n", estimated_syscall);
 
 	// Check if estimated syscall already exists
 	int index = -1;
